syntax = "proto3";

package gothic.api;

option go_package = "github.com/jrapoport/gothic/api/grpc/rpc/admin";

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

import "request.proto";
import "response.proto";

service Admin {
  rpc CreateSignupCodes (CreateSignupCodesRequest) returns (SignupCodesResponse) {
  }

  rpc CheckSignupCode (CheckSignupCodeRequest) returns (SignupCodeResponse) {
  }

  rpc DeleteSignupCode (DeleteSignupCodeRequest) returns (google.protobuf.Empty) {
  }

  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
  }

  rpc SearchAuditLogs (SearchRequest) returns (AuditLogsResult) {
  }

  rpc Settings (SettingsRequest) returns (SettingsResponse) {
  }
}

message CreateSignupCodesRequest {
  int64 uses = 1;
  int64 count = 2;
}

message SignupCodesResponse {
  repeated string codes = 1;
}

message CheckSignupCodeRequest {
  string code = 1;
}

enum CodeFormat {
  Invite = 0;
  PIN = 1;
}

enum CodeType {
  Infinite = 0;
  Single = 1;
  Multi = 2;
  Timed = 3;
}

message SignupCodeResponse {
  bool valid = 1;
  string code = 2;
  CodeFormat format = 3;
  CodeType type = 4;
  google.protobuf.Duration expiration = 5;
  string user_id = 6;
}

message DeleteSignupCodeRequest {
  string code = 1;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  bool admin = 3;
  optional string username = 4;
  optional google.protobuf.Struct data = 5;
}

message CreateUserResponse {
  string role = 1;
  string email = 2;
}

message AuditLog {
  uint64 id = 1;
  enum Type {
    System = 0;
    Account = 1;
    Token = 2;
    User = 3;
  }
  Type type = 2;
  string action = 3;
  string user_id = 4;
  google.protobuf.Struct fields = 5;
  google.protobuf.Timestamp created_at = 6;
}

message AuditLogsResult {
  repeated AuditLog logs = 1;
  PagedResponse page = 2;
}

message SettingsRequest {
}

message SettingsResponse {
  string name = 1;
  string version = 2;
  string status = 3;
  SignupSettings signup = 4;
  MailSettings mail = 5;
}

message SignupSettings {
  bool disabled = 1;
  bool autoconfirm = 2;
  ProviderSettings provider = 3;
}

message ProviderSettings {
  string internal = 1;
  map<string, bool> external = 2;
}

message MailSettings {
  bool   disabled = 1;
  string host = 2;
  int64    port = 3;
  string authentication = 4;
  string encryption = 5;
}
